Modify Zoom link and access info in physyc.html
Updated Zoom conference details and access information.

--- a/physyc.html
+++ b/physyc.html
@@ -83,24 +83,21 @@
         <hr>
         <p>Тут може буде колись домашнє завдання або корисні файли.</p>
         
-        <a href="https://us05web.zoom.us/j/89684386977?pwd=XMzFkJvx5brbYTVaKcGYYzrKOqu6OB.1" class="zoom-link" target="_blank">
-            Увійти в Zoom конференцію
-        </a>
-        <p>Не працює? Спробуй це:</p>
-        <a href="https://us05web.zoom.us/meeting/tZ0rf-2rpj0jHdPvr95Ki5RfRQznJFGbUzmZ/ics?icsToken=DLN_QG9Zza2nzxgf5QAALAAAAPRe6CiOyNUoSlch13qNiSqwHhpXXDeNuJa1QBv8cQt9m0BE3f-9cFZlj_9jxecQfIKuxVHhyQd1yfMTQzAwMDAwMQ&meetingMasterEventId=z4OcjRRNSZKXsbctjJzR6g" class="zoom-link" target="_blank">
+        <a href="https://us05web.zoom.us/j/4338655554?pwd=Rm5KdXhHL3YzRHJBS3pzY3cwVGN2Zz09&omn=88356655565" class="zoom-link" target="_blank">
             Увійти в Zoom конференцію
         </a>
         <div class="access-info">
         <div class="info-item">
             <span>Ідентифікатор:</span>
-            <strong class="copy-text">896 8438 6977</strong> </div>
+            <strong class="copy-text">433 865 5554</strong> </div>
         <div class="info-item">
             <span>Код доступу:</span>
-            <strong class="copy-text">3IqMGM</strong> </div>
+            <strong class="copy-text">V5jee3</strong> </div>
         </div>
         <br><br>
         <a href="index.html" style="color: #888;">← Повернутися до розкладу</a>
     </div>
 
 </body>
+
 </html>
