Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <div class="leson">
                 <h3>Географія</h3>
-                <button disabled>перейти до посилання на зум</button>
+                <a href="Geography.html"><button>перейти до посилання на зум</button></a>
             </div>
         </div>
         <div class="wednesday">
@@ -74,7 +74,7 @@
             </div>
             <div class="leson">
                 <h3>Географія</h3>
-                <button disabled>перейти до посилання на зум</button>
+                <a href="Geography.html"><button>перейти до посилання на зум</button></a>
             </div>
             <div class="leson">
                 <h3>Хімія</h3>
@@ -157,4 +157,5 @@
         </div>
     </div>
 </body>
+
 </html>
