Update Zoom link and access info in Geography.html

--- a/Geography.html
+++ b/Geography.html
@@ -82,20 +82,21 @@
         <hr>
         <p>Тут може буде колись домашнє завдання або корисні файли.</p>
         
-        <a href="ПРОПИШИ_ТУТ_ПОСИЛАННЯ_НА_ЗУМ" class="zoom-link" target="_blank">
+        <a href="https://us05web.zoom.us/j/9048013888?pwd=Vlk2M3BlcllHcy9jUkpyd3lGaVVGZz09" class="zoom-link" target="_blank">
             Увійти в Zoom конференцію
         </a>
         <div class="access-info">
         <div class="info-item">
             <span>Ідентифікатор:</span>
-            <strong class="copy-text">123 456 7890</strong> </div>
+            <strong class="copy-text">???</strong> </div>
         <div class="info-item">
             <span>Код доступу:</span>
-            <strong class="copy-text">ABCXYZ</strong> </div>
+            <strong class="copy-text">???</strong> </div>
         </div>
         <br><br>
         <a href="index.html" style="color: #888;">← Повернутися до розкладу</a>
     </div>
 
 </body>
+
 </html>
