--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <div class="leson">
                 <h3>Геометрія</h3>
-                <a href="geometry.html"><button>перейти до посилання на зум</button></a>
+                <a href="Geometry.html"><button>перейти до посилання на зум</button></a>
             </div>
             <div class="leson">
                 <h3>Біологія</h3>
@@ -105,7 +105,7 @@
             </div>
             <div class="leson">
                 <h3>Геометрія</h3>
-                <a href="geometry.html"><button>перейти до посилання на зум</button></a>
+                <a href="Geometry.html"><button>перейти до посилання на зум</button></a>
             </div>
             <div class="leson">
                 <h3>Англійська мова</h3>
@@ -121,7 +121,7 @@
             </div>
             <div class="leson">
                 <h3>Українська література</h3>
-                <a href=""><button>перейти до посилання на зум</button></a>
+                <a href="Ukrlit.html"><button>перейти до посилання на зум</button></a>
             </div>
             <div class="leson">
                 <h3>Технології</h3>
@@ -159,3 +159,4 @@
 </body>
 
 </html>
+
