--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="day">Середа</div>
             <div class="leson">
                 <h3>Всесвітня історія</h3>
-                <a href="worldHistory.html"><button>перейти до посилання на зум</button></a>
+                <a href="WorldHistory.html"><button>перейти до посилання на зум</button></a>
             </div>
             <div class="leson">
                 <h3>Географія</h3>
@@ -90,11 +90,11 @@
             </div>
             <div class="leson">
                 <h3>Мистецтво</h3>
-                <button disabled>перейти до посилання на зум</button>
+                <a href="mistetstvo.html"><button>перейти до посилання на зум</button></a>
             </div>
             <div class="leson">
                 <h3>Інформатика</h3>
-                <a href="informatic.html"><button>перейти до посилання на зум</button></a>
+                <a href="Informatic.html"><button>перейти до посилання на зум</button></a>
             </div>
         </div>
         <div class="thursday">
@@ -159,4 +159,5 @@
 </body>
 
 </html>
+
 
