--- a/english.html
+++ b/english.html
@@ -83,16 +83,16 @@
         <hr>
         <p>Тут може буде колись домашнє завдання або корисні файли.</p>
         
-        <a href="https://us05web.zoom.us/j/81629210359?pwd=UVJ4ZE1VTkhBRnlzdmFORjI0blRldz09" class="zoom-link" target="_blank">
+        <a href="https://us05web.zoom.us/j/5521246153?pwd=V2RtbVVvaHBvT3l2cUdZUk1vSTNSZz09" class="zoom-link" target="_blank">
             Увійти в Zoom конференцію група 1!
         </a>
         <div class="access-info">
         <div class="info-item">
             <span>Ідентифікатор:</span>
-            <strong class="copy-text">816 2921 0359</strong> </div>
+            <strong class="copy-text">552 124 6153</strong> </div>
         <div class="info-item">
             <span>Код доступу:</span>
-            <strong class="copy-text">8uN0d7</strong> </div>
+            <strong class="copy-text">b55sC3</strong> </div>
         </div>
 
         <a href="https://us04web.zoom.us/j/3924602454?pwd=YWpjU2xLeDJreFZuZlFiWVovSnhRdz09" class="zoom-link" target="_blank">
@@ -111,4 +111,5 @@
     </div>
 
 </body>
+
 </html>
