Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </div>
             <div class="leson">
                 <h3>Українська література</h3>
-                <a href="Ukrlit.html"><button>перейти до посилання на зум</button></a>
+                <a href="ukrLit.html"><button>перейти до посилання на зум</button></a>
             </div>
             <div class="leson">
                 <h3>Технології</h3>
@@ -198,6 +198,7 @@
 </body>
 
 </html>
+
 
 
 
