Fix HTML formatting and correct typos

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="leson">
                 <h3>Історія України</h3>
-                <a href="historyUKR.html"><button>перейти до посилання на зум</button></a>
+                <a href="hystoryUKR.html"><button>перейти до посилання на зум</button></a>
             </div>
             <div class="leson">
                 <h3>Біологія</h3>
@@ -71,7 +71,7 @@
             </div>
             <div class="leson">
                 <h3>Інформатика</h3>
-                <a href="informatic.html"><button>перейти до посилання на зум</button></a>
+                <a href="Informatic.html"><button>перейти до посилання на зум</button></a>
             </div>
             <div class="leson">
                 <h3>Громадянська освіта</h3>
@@ -198,6 +198,7 @@
 </body>
 
 </html>
+
 
 
 
